[gd_scene load_steps=6 format=3 uid="uid://b15vkua2stptc"]

[ext_resource type="Script" uid="uid://pirgxfn6eyan" path="res://Slot.gd" id="1_jxctb"]
[ext_resource type="Script" uid="uid://1ilklfatjcu4" path="res://Workbench.gd" id="1_mbgn7"]
[ext_resource type="Resource" uid="uid://ci63d8pniaie1" path="res://Resources/Parts/GPU_Basic.tres" id="2_eacyk"]
[ext_resource type="PackedScene" uid="uid://domkd1xod2cpx" path="res://InventoryPanel.tscn" id="3_mbgn7"]
[ext_resource type="Script" uid="uid://c707s7vxumyvs" path="res://SafeArea.gd" id="3_r6eg7"]

[node name="Workbench" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mbgn7")
gpu_item_to_sell = ExtResource("2_eacyk")

[node name="SafeZone" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_r6eg7")

[node name="GameSpace" type="Control" parent="SafeZone"]
layout_mode = 2
mouse_filter = 1

[node name="InventoryPanel" parent="SafeZone/GameSpace" instance=ExtResource("3_mbgn7")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2

[node name="Motherboard" type="ColorRect" parent="SafeZone/GameSpace"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0.13127825, 0.34221622, 0.23683, 1)

[node name="Slot_PCIe" type="ColorRect" parent="SafeZone/GameSpace/Motherboard"]
layout_mode = 0
offset_left = 47.0
offset_top = 252.0
offset_right = 247.0
offset_bottom = 282.0
color = Color(0.39308554, 0.3930855, 0.39308548, 1)
script = ExtResource("1_jxctb")
compatible_type = null

[node name="MoneyLabel" type="Label" parent="SafeZone/GameSpace"]
layout_mode = 0
offset_top = 348.0
offset_right = 1280.0
offset_bottom = 371.0
text = "Деньги: 0"

[node name="ToWorkButton" type="Button" parent="SafeZone/GameSpace"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
text = "На работу"

[node name="BuyGpuButton" type="Button" parent="SafeZone/GameSpace"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
text = "Купить GPU (100$)"
